--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "mongodb": "^3.6.6",
     "mysql": "^2.18.1",
+    "nanoid": "^3.1.23",
     "node-rsa": "^1.1.1",
     "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
